commit put and post healthrecord endpoints